# fotopruvodce

./: .gitignore  MANIFEST.in  README.md  manage.py  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py
conf/: django.conf  gunicorn.conf  nginx.conf  service.conf
debian/: changelog  control  copyright  fotopruvodce.dirs  fotopruvodce.install  fotopruvodce.links  fotopruvodce.lintian-overrides  fotopruvodce.logrotate  fotopruvodce.postinst  fotopruvodce.prerm  fotopruvodce.service  rules
debian/source/: lintian-overrides
fotopruvodce/: __init__.py  settings.py  urls.py  wsgi.py
fotopruvodce/core/: admin.py  apps.py  auth.py  forms.py  logging.py  middlewares.py  models.py  staticfiles.py  text.py  views.py
fotopruvodce/core/migrations/: 0001_add_user_profile.py  0002_user_profile_add_old_fotopruvodce_attrs.py  0003_markdown_help_text.py  0004_add_user_preferences.py  0005_add_custom_css.py  0006_gdpr_remove_firstname_lastname_email.py
fotopruvodce/core/templatetags/: get_params.py  text_extras.py  tweak_forms.py
fotopruvodce/discussion/: admin.py  apps.py  forms.py  models.py  views.py
fotopruvodce/discussion/migrations/: 0001_initial.py  0002_comment_add_thread_and_level.py  0003_alter_timestamp_default.py  (+3 more)
fotopruvodce/photos/: admin.py  apps.py  forms.py  models.py  views.py
fotopruvodce/registration/: apps.py  crypt.py  forms.py  tests.py  views.py
fotopruvodce/settings/: __init__.py  base.py  local.py.sample
fotopruvodce/static/: robots.txt
fotopruvodce/templates/: base.html
fotopruvodce/todo/: admin.py  apps.py  models.py
fotopruvodce/utils/: text.py
fotopruvodce/workshops/: admin.py  apps.py  models.py  views.py
templates/: base.html
templates/registration/: register.html
(+61 files in other folders)
