[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
name = "fotopruvodce"
version = "1.3.0"
description = "Fotografická diskusní aplikace poskytujici prostor fotografům libovolného ražení k diskusi svých problémů, či sdělování zkušenosti."
authors = ["Jan Seifert <jan.seifert@fotkyzcest.net>"]
license = "BSD-3-Clause"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.1"
html2text = "^2024.2.26"
markdown = "^3.7"
mysqlclient = "^2.2.4"
pillow = "^10.4.0"
gunicorn = "^23.0.0"

[tool.poetry.group.dev.dependencies]
ipython = "^8.27.0"
flake8 = "^7.1.1"
black = "^24.8.0"
isort = "^5.13.2"
flake8-mutable = "^1.2.0"
flake8-blind-except = "^0.2.1"
flake8-broken-line = "^1.0.0"
flake8-comprehensions = "^3.15.0"
flake8-print = "^5.0.0"
flake8-commas = "^4.0.0"
flake8-pep3101 = "^2.1.0"
flake8-logging-format = "^2024.24.12"

[tool.poetry.scripts]
manage-fotopruvodce = "fotopruvodce:main"


[tool.isort]
profile = "black"
